<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/create_cancel_button"
            style="@style/DefaultTextStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/rounded_button"
            android:text="@string/create_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:id="@+id/create_validate_button"
            style="@style/DefaultTextStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:background="@drawable/rounded_button"
            android:text="@string/create_validate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Spinner
        android:id="@+id/create_sport"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/small_margin"

        android:entries="@array/create_sports"
        android:paddingLeft="@dimen/default_margin" />

    <EditText
        android:id="@+id/create_summary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/create_summary"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"
        android:background="@drawable/rounded_edit_text"
        />

    <EditText
        android:id="@+id/create_warmup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/create_warmup"
        android:paddingLeft="@dimen/default_margin"
        android:background="@drawable/rounded_edit_text"
        style="@style/DefaultTextStyle"
        />
    <EditText
        android:id="@+id/create_sequence"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/small_margin"
        android:hint="@string/create_sequence"
        android:background="@drawable/rounded_edit_text"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"
        />
    <EditText
        android:id="@+id/create_stretch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/small_margin"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/create_stretch"
        android:paddingLeft="@dimen/default_margin"
        style="@style/DefaultTextStyle"
        />

</LinearLayout>